--- a/flask-ansible-cicd/Jenkinsfile
+++ b/flask-ansible-cicd/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/saiusha30/flask-docker-ansible-cicd.git'
+                git branch: 'main', url: 'https://github.com/saiusha30/flask-docker-ansible-cicd.git'
             }
         }
 
